deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zavorth
  labels:
    app: zavorth
spec:
  type: ClusterIP
  selector:
    app: zavorth
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
